--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
 theme: jekyll-theme-minimal
 title: Pagina cayetano 
 description: En esta pagina muestro mis aficciones y hobbies.
+permalink: pretty
+exclude:
+  - README.md
